# stack

./: .gitignore  LICENSE  analyse.py  auto_disk_burner.py  google_form_filler.py  test2_generate.cpp  test3_generate.cpp  test4_generate.cpp
OpenGL_Playground/: CMakeLists.txt  OpenGL_Playground  compile.sh  fast_build.sh  playground.cpp
OpenGL_Playground/common/: shader_v2.cpp  shader_v2.hpp
PiGame/pigame/: controlflow  db.sqlite3  maze.json  players.json  quotes.py
PiGame/pigame/home/: generate_maze.py  test.py  urls.py  views.py
PiGame/pigame/home/templates/: base.html
PiGame/pigame/maze/: create_maze.py  generate_maze.py  urls.py  views.py
PiGame/pigame/pigame/: settings.py  urls.py  wsgi.py
PiGame/pigame/players/: urls.py  views.py
PiGame/pigame/receive_data/: apps.py  views.py
TestApplication/app/: build.gradle
TestApplication/app/src/main/: AndroidManifest.xml
chef-test/django/: Berksfile  metadata.rb
chef-test/django/recipes/: default.rb
inc_test_generators/: test1_generate.cpp  test3_generate.cpp
kitchen/: .kitchen.yml  Gemfile
kitchen/.kitchen/: default-debian-86.yml
kitchen/.kitchen/kitchen-vagrant/kitchen-kitchen-default-debian-86/: Vagrantfile
kitchen/cookbooks/django/: Berksfile  metadata.json  metadata.rb
kitchen/cookbooks/django/attributes/: default.rb
kitchen/cookbooks/django/recipes/: default.rb  deploy.rb  setup_env.rb  setup_user.rb  startproject.rb
kitchen/cookbooks/django/templates/: urls.py.erb  (+3 more)
kitchen/cookbooks/nginx/: Berksfile
kitchen/cookbooks/uwsgi/: .kitchen.yml  README.md  metadata.json  metadata.rb
(+50 files in other folders)
